Add transition & transform effect

--- a/main.css
+++ b/main.css
@@ -57,10 +57,24 @@ h1 {
 
 .photo1 {
     width: 450px;
+    transition: transform 0.3s ease-in-out;
+}
+
+.photo1:hover {
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
+    transform: scale(0.9);
 }
 
 .photo2 {
     width: 450px;
+    transition: transform 0.2s ease-in-out;
+}
+
+.photo2:hover {
+    -webkit-transform: scale(0.95) rotate(5deg);
+    -ms-transform: scale(0.95) rotate(5deg);
+    transform: scale(0.95) rotate(5deg);
 }
 
 .photo3 {
