--- a/main.css
+++ b/main.css
@@ -107,6 +107,39 @@ h1 {
     width: 450px;
 }
 
+.overlayT {
+    position: relative;
+    width: 450;
+    height: 278;
+}
+
+.overlayT .link {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #27a38d;
+    left: 0px;
+    top: 0px;
+    opacity: 0%;
+    transition: opacity 0.5s ease-in-out;
+}
+
+.overlayT:hover .link {
+    opacity: 0.9;
+}
+
+.icon {
+    display: block;
+    top: 25%;
+    position: relative;
+    font-size: 72px;
+}
+
+.icon p {
+    font-size: 20px;
+}
+
 .photo5 {
     width: 450px;
 }
