Add hover effect .photo5

--- a/main.css
+++ b/main.css
@@ -142,6 +142,18 @@ h1 {
 
 .photo5 {
     width: 450px;
+    height: 278px;
+    overflow: hidden;
+}
+
+.photo5 img {
+    transition: all 0.5s ease-in-out;
+}
+
+.photo5:hover img {
+    -webkit-transform: scale(1.15);
+    -ms-transform: scale(1.15);
+    transform: scale(1.15);
 }
 
 .photo6 {
