Add hover effect .photo6

--- a/main.css
+++ b/main.css
@@ -158,4 +158,16 @@ h1 {
 
 .photo6 {
     width: 450px;
+    height: 278px;
+    overflow: hidden;
+}
+
+.photo6 img {
+    transition: all 0.7s ease-in-out;
+}
+
+.photo6:hover img {
+    -webkit-transform: scale(1.2) rotate(-5deg);
+    -ms-transform: scale(1.2) rotate(-5deg);
+    transform: scale(1.2) rotate(-5deg);
 }
